# freez

./: Freez.py  README.md  config.py  freez.py  freez_parser.py  main.py  pyproject.toml  test.py  ufreez.py  ufreez_parser.py
data/: data.json
