[project]
name = "freez"
version = "1.0.0"
description = ""
authors = [
    {name = "Marek Štec",email = "mar.stec@seznam.cz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
